# panoptic_dataset_collector

./: README.md  pyproject.toml
panoptic_dataset_collector/: google_search.py  google_search_gui.py  safari_in_india.yaml
panoptic_dataset_collector/utils/: crawler.py  filter.py  io.py  panoptic_annotator.py  serve_gradio_iterative.py  utils.py
